<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">DicomAndroid</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
 
    <!-- Demo patient -->
    <string name="d_p_name">nombre APELLIDO APELLIDO</string>
    <string name="d_p_id">123456789</string>
    <string name="d_p_age">42</string>
    
    <!-- Demo report -->
    <string name="d_rd_date">28/07/2011</string>
    <string name="d_rd_code">X123456789</string>
    <string name="d_rd_id">X123456789</string>
    
    
    <!-- Patient data -->
    <string name="p_age">Age: </string>
    <string name="p_id">Id: </string>
    <string name="p_years">%1$s years</string>
    
    <!-- Report data -->
    <string name="rd_title">Report data</string>
    <string name="rd_date">Date</string>
    <string name="rd_date_hint">Date when the report was made</string>
    <string name="rd_code">Report code</string>
    <string name="rd_code_hint">Report identifier</string>
	<string name="rd_studyID">Associated study ID</string>
	<string name="rd_studyID_hint">Associated study identifier</string>
	<string name="in_title">Injuries report</string>
	
	<!-- Tree Node -->
	<string name="add_node_desc">Add a new node"</string>
	<string name="edit_node_desc">Edit this node"</string>
	<string name="delete_node_desc">Delete this node"</string>
	
	<!-- Default buttons -->
    <string name="add">Add</string>
    <string name="finish">Finish</string>
 	<string name="validate">Validate</string>
 	<string name="change">Change</string>   
 	
 	<!-- Breast report -->
 	<string name="leftBreast">Left Breast</string>
 	<string name="rightBreast">Right Breast</string>
    
 </resources>