<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content"
	android:orientation="horizontal" android:paddingLeft="15dp"
	android:paddingTop="5dp" android:paddingBottom="5dp"
	android:background="@color/babyBlue">

	<!-- Patient name -->
	<TextView android:id="@+id/patientName" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="name SURNAME"
		android:textColor="@color/black" android:textSize="20dp" />

	<!-- Patient ID -->
	<TextView android:id="@+id/patientID_label" android:text="@string/p_id"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:textStyle="bold" android:layout_below="@id/patientName"
		android:textColor="@color/darkGrey" />
	<TextView android:id="@+id/patientID" android:text="@string/d_p_id"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_below="@id/patientName" android:layout_toRightOf="@id/patientID_label"
		android:textColor="@color/darkGrey"/>

	<!-- Patient age -->
	<TextView android:id="@+id/patientAge_label" android:text="@string/p_age"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:paddingLeft="10dp" android:textStyle="bold"
		android:layout_below="@id/patientName" android:layout_toRightOf="@id/patientID"
		android:textColor="@color/darkGrey" />
	<TextView android:id="@+id/patientAge" android:text="42 años"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_below="@id/patientName" android:layout_toRightOf="@id/patientAge_label"
		android:textColor="@color/darkGrey" />

</RelativeLayout>
